# bilby_antiglitch

./: README.md  pyproject.toml
.github/workflows/: test.yml
bilby_antiglitch/: bilby_pipe.py  likelihood.py
bilby_antiglitch/tests/: test_bilby_pipe.py  test_likelihood.py  test_source.py
bilby_glitch/: __init__.py  bilby_pipe.py  likelihood.py  source.py
bilby_glitch/tests/: test_source.py
docs/: conf.py  index.rst  installation.rst
examples/: additional_arguments.ini
