[project]
name = "bilby_glitch"
version = "0.1.0"
dependencies = [
    "bilby",
    "bilby_pipe"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.scripts]
bilby_glitch_pipe = "bilby_pipe.main:main"

[tool.setuptools.packages.find]
include = ["bilby_glitch*"]
