[project]
name = "bilby_antiglitch"
version = "0.1.0"
dependencies = [
    "bilby",
    "bilby_pipe @ git+https://git.ligo.org/charlie.hoy/bilby_pipe.git@input_class"
]

[project.optional-dependencies]
test = [
        "pytest",
        "pytest-cov"
]
docs = [
        "genbadge[coverage]",
        "sphinx<9.0.0", # due to incompatibility with sphinx-tabs
        "sphinx-immaterial",
        "sphinx-tabs"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["bilby_antiglitch*"]
