[build-system]
requires = [
        "setuptools>=61.0",
        "setuptools_scm[toml]>=3.4.3",
        "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "bilby_antiglitch"
version = "0.1.0a1"
authors = [
        { name = "Charlie Hoy", email = "charlie.hoy@port.ac.uk" }
]
description = "Python package to extend the functionality of `bilby` to additionally sample over glitch realisations"
readme = "README.md"
license = { text = "MIT" }
classifiers = [
        "License :: OSI Approved :: MIT License",
        "Natural Language :: English",
        "Programming Language :: Python",
        "Programming Language :: Python :: 3",
        "Programming Language :: Python :: 3.11",
        "Programming Language :: Python :: 3.12",
        "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.11"
dependencies = [
    "bilby",
    "bilby_pipe @ git+https://git.ligo.org/charlie.hoy/bilby_pipe.git@input_class"
]

[project.optional-dependencies]
test = [
        "pytest",
        "pytest-cov"
]
docs = [
        "genbadge[coverage]",
        "sphinx<9.0.0", # due to incompatibility with sphinx-tabs
        "sphinx-immaterial",
        "sphinx-tabs"
]

[tool.setuptools.packages.find]
include = ["bilby_antiglitch*"]
